[package]
name = "poc-framework"
version = "0.2.0"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["solana", "smart", "contracts"]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.1"
solana-sdk = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-logger = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-runtime = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-transaction-status = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-cli-output = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-compute-budget-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-vote-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-stake-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-config-program = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-client = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
solana-faucet = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
spl-token = "3.3.0"
spl-memo = "3.0.1"
spl-associated-token-account = "1.0.5"
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"
solana-ledger = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}

[dev-dependencies]
solana-program-runtime = { git = "https://github.com/solana-labs/solana.git" , branch = "main"}
